[gd_scene load_steps=41 format=3 uid="uid://cjye6xpdv34of"]

[ext_resource type="Script" path="res://PlayerCharacter/Scripts/PlayerCharacter.gd" id="1_0akyq"]
[ext_resource type="Script" path="res://PlayerCharacter/Scripts/PCMovement.gd" id="1_7j0ss"]
[ext_resource type="Script" path="res://PlayerCharacter/Scripts/PlayerRotator.gd" id="2_0m5xn"]
[ext_resource type="PackedScene" uid="uid://cek5x81rd0yiw" path="res://UI/ui.tscn" id="2_d3p1y"]
[ext_resource type="Script" path="res://PlayerCharacter/Scripts/TransformationChange.gd" id="3_bjmh7"]
[ext_resource type="PackedScene" uid="uid://bqguar4cro7y5" path="res://PlayerCharacter/tail.tscn" id="6_gubbw"]
[ext_resource type="Texture2D" uid="uid://bm81r0s0n3iua" path="res://PlayerCharacter/Sprites/Placeholder/Tan-Def-anim 3.0-Idle.png" id="7_7eto1"]
[ext_resource type="AudioStream" uid="uid://dve851xu5rack" path="res://PlayerCharacter/Sounds/Transformation (Tanuki to Object).wav" id="7_yl2lp"]
[ext_resource type="AudioStream" uid="uid://cgjofq6okjvbk" path="res://PlayerCharacter/Sounds/Movement While Transformed.wav" id="8_bh82x"]
[ext_resource type="AudioStream" uid="uid://dmpf0u48j6o2q" path="res://PlayerCharacter/Sounds/Player SFX Movement 1_Loop.wav" id="8_m3ffu"]
[ext_resource type="Texture2D" uid="uid://bnhmynh1hfbkk" path="res://PlayerCharacter/Sprites/Tan-Def - anim 2.0.1-variant-RUN+IDLE.png" id="8_nodaq"]
[ext_resource type="AudioStream" uid="uid://bv55d6egj6hss" path="res://PlayerCharacter/Sounds/Transformation (Object to Tanuki).wav" id="8_rlmsq"]
[ext_resource type="PackedScene" uid="uid://tp0v8dsqkf32" path="res://PlayerCharacter/player_attack.tscn" id="13_dunae"]
[ext_resource type="AudioStream" uid="uid://bhkwjvhngjtj6" path="res://PlayerCharacter/Sounds/Tanuki_Main Attack.wav" id="15_fe3wv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2vp7j"]
atlas = ExtResource("7_7eto1")
region = Rect2(0, 12, 34, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcpsb"]
atlas = ExtResource("8_nodaq")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2hys"]
atlas = ExtResource("8_nodaq")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sayk2"]
atlas = ExtResource("8_nodaq")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjrvo"]
atlas = ExtResource("8_nodaq")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cdw3"]
atlas = ExtResource("8_nodaq")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sawan"]
atlas = ExtResource("8_nodaq")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vu2y5"]
atlas = ExtResource("8_nodaq")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_owqk2"]
atlas = ExtResource("8_nodaq")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_alle2"]
atlas = ExtResource("8_nodaq")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4y62"]
atlas = ExtResource("8_nodaq")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvuu3"]
atlas = ExtResource("8_nodaq")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pokw2"]
atlas = ExtResource("8_nodaq")
region = Rect2(1408, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_588uk"]
atlas = ExtResource("8_nodaq")
region = Rect2(1536, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wa0o"]
atlas = ExtResource("8_nodaq")
region = Rect2(1664, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7gem"]
atlas = ExtResource("8_nodaq")
region = Rect2(1792, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqyed"]
atlas = ExtResource("8_nodaq")
region = Rect2(1920, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mi6oq"]
atlas = ExtResource("8_nodaq")
region = Rect2(2048, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8m3tp"]
atlas = ExtResource("8_nodaq")
region = Rect2(2176, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jd0yb"]
atlas = ExtResource("8_nodaq")
region = Rect2(2304, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0oeqv"]
atlas = ExtResource("8_nodaq")
region = Rect2(2432, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_veawu"]
atlas = ExtResource("8_nodaq")
region = Rect2(2560, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_baygo"]
atlas = ExtResource("8_nodaq")
region = Rect2(2688, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjrrh"]
atlas = ExtResource("8_nodaq")
region = Rect2(2816, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_5la1i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vp7j")
}],
"loop": true,
"name": &"hidden",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcpsb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2hys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sayk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjrvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cdw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sawan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vu2y5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owqk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alle2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4y62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvuu3")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pokw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_588uk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wa0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7gem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqyed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mi6oq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8m3tp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jd0yb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0oeqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_veawu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_baygo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjrrh")
}],
"loop": true,
"name": &"running",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_nxjry"]
radius = 50.01

[node name="PlayerCharacter" type="CharacterBody2D" node_paths=PackedStringArray("tailRef", "transformationChangeRef", "movementRef", "spriteRef", "playerHUD")]
collision_layer = 11
script = ExtResource("1_0akyq")
tailRef = NodePath("Rotator/TransformationChange/Tail")
transformationChangeRef = NodePath("Rotator/TransformationChange")
movementRef = NodePath("Rotator/Movement")
spriteRef = NodePath("AnimatedSprite2D")
playerHUD = NodePath("UI")

[node name="Sounds" type="Node" parent="."]

[node name="EnterTransformation" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("7_yl2lp")

[node name="ExitTransformation" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("8_rlmsq")

[node name="NormalMovement" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("8_m3ffu")

[node name="TransformedMovement" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("8_bh82x")

[node name="Attack" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("15_fe3wv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5la1i")
animation = &"running"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.75, 0.75)

[node name="UI" parent="." instance=ExtResource("2_d3p1y")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nxjry")

[node name="Rotator" type="Node2D" parent="."]
script = ExtResource("2_0m5xn")
downRad = 180
leftRad = 270
rightRad = 90

[node name="Sprite2D" type="Sprite2D" parent="Rotator"]

[node name="TransformationChange" type="Node2D" parent="Rotator" node_paths=PackedStringArray("tailRef", "tailLocation", "playerRef", "baseCollisionShape", "playerSprite", "enterTransformationSound", "exitTransformationSound", "playerTransformedSprite")]
script = ExtResource("3_bjmh7")
transformationDuration = 10
tailActivationTime = 3
timeRefundOnReactivation = 2
tailRef = NodePath("Tail")
tailLocation = NodePath("TailLocation")
playerRef = NodePath("../..")
baseCollisionShape = NodePath("../../CollisionShape2D")
playerSprite = NodePath("../../AnimatedSprite2D")
enterTransformationSound = NodePath("../../Sounds/EnterTransformation")
exitTransformationSound = NodePath("../../Sounds/ExitTransformation")
playerTransformedSprite = NodePath("../Sprite2D")
transformationLockDuration = 1

[node name="TailLocation" type="Node2D" parent="Rotator/TransformationChange"]
position = Vector2(0, 75)

[node name="Tail" parent="Rotator/TransformationChange" instance=ExtResource("6_gubbw")]

[node name="Movement" type="Node2D" parent="Rotator" node_paths=PackedStringArray("rigidbodyRef", "normalMovementSound", "transformedMovementSound", "playerRef")]
script = ExtResource("1_7j0ss")
rigidbodyRef = NodePath("../..")
accelerationPerSecond = 700
defaultMaxSpeed = 500
normalMovementSound = NodePath("../../Sounds/NormalMovement")
transformedMovementSound = NodePath("../../Sounds/TransformedMovement")
playerRef = NodePath("../..")

[node name="PlayerAttack" parent="Rotator" node_paths=PackedStringArray("attackHitboxes", "attackSounds", "characterRef") instance=ExtResource("13_dunae")]
attackHitboxes = [null, NodePath("PlayerAttackHitbox"), null]
attackSounds = [null, NodePath("../../Sounds/Attack"), null]
characterRef = NodePath("../..")

[connection signal="change_speed" from="Rotator/TransformationChange" to="Rotator/Movement" method="_on_transformation_change_change_speed"]
[connection signal="reset_speed" from="Rotator/TransformationChange" to="Rotator/Movement" method="_on_transformation_change_reset_speed"]
[connection signal="send_transformation_active_info" from="Rotator/TransformationChange" to="UI" method="_on_transformation_change_send_transformation_active_info"]
[connection signal="send_transformation_name" from="Rotator/TransformationChange" to="UI" method="_on_transformation_change_send_transformation_name"]
[connection signal="movement_direction" from="Rotator/Movement" to="Rotator" method="_on_movement_movement_direction"]
